--- a/mining.html
+++ b/mining.html
@@ -46,11 +46,11 @@
 </head>
 <body>
     <div id="balance-container">
-        <h2>💎 Total $ANG: <span id="balance">0</span></h2>
+        <h2>👼 Total $ANG: <span id="balance">0</span></h2>
     </div>
 
     <div id="mining-container">
-        <h3>⛏️ Mining $ANG</h3>
+        <h3>CLICK MINE NOW TO MINE EVERY 24HRS</h3>
         <p id="daily-mining-rate">Current Mining Rate: 200 $ANG/day</p>
         <button class="button" onclick="mineANG()">Mine Now</button>
     </div>
