--- a/leaderboard.html
+++ b/leaderboard.html
@@ -3,123 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Complete Tasks</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="material/css/styles.css">
+    <title>$ANG Token Presale</title>
     <style>
         body {
+            background-color: white;
             font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #000; 
-            color: #fff; 
+            color: gold;
             margin: 0;
             padding: 0;
+            text-align: center;
         }
-
-        #balance-container {
+        h1, h2, p {
             margin: 20px;
-            font-size: 18px;
         }
-
-        .task-container {
-            margin: 10px auto;
-            max-width: 600px;
-        }
-
-        .task {
-            margin: 10px auto;
-            padding: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            border: 1px solid #000000; 
-            border-radius: 12px;
-            background-color: #333030; 
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease;
-            width: 80%;
-        }
-
-        .task:hover {
-            transform: translateY(-5px);
-        }
-
-        .task-detail {
-            display: flex;
-            align-items: center;
-        }
-
-        .task-image img {
-            border-radius: 8px;
-            margin-right: 10px;
-        }
-
-        .task h4 {
-            margin: 0;
-            font-size: 18px;
-            color: #f2f2f2;
-        }
-
-        .task-data {
-            display: flex;
-            align-items: center;
-            margin-top: 8px;
-        }
-
-        .task-data img {
-            margin-right: 5px;
-        }
-
-        .task-data h5 {
-            margin: 0;
-            color: #ffcc00;
-            font-size: 18px;
-        }
-
-        .task-button {
-            background-color: #ffffff; 
-            color: rgb(0, 0, 0);
+        .button {
+            background-color: gold;
+            color: white;
             border: none;
-            padding: 10px 20px;
+            padding: 15px 25px;
             font-size: 16px;
+            text-decoration: none;
+            border-radius: 5px;
             cursor: pointer;
-            border-radius: 8px;
-            transition: background-color 0.3s ease;
         }
-
-        .task-button:hover {
-            background-color: #2dd60c;
-        }
-
-        @media (max-width: 600px) {
-            .task-container {
-                max-width: 100%;
-            }
-
-            .task-button {
-                padding: 10px 15px;
-                font-size: 14px;
-            }
-
-            .task h4 {
-                font-size: 16px;
-            }
+        .button:hover {
+            background-color: darkgoldenrod;
         }
     </style>
 </head>
 <body>
-    <h2><b>🏆</b></h2>
-
-    <div id="balance-container">
-        <span id="balance">0</span> 👼 total ANGELUSD
-    </div><br>
-    <h2><u><b>🏆 our mission 🏆</b></u></h2>
-
-    <div class="task-container" id="leaderboard">
-        <!-- Leaderboard items will be injected here dynamically -->
-    </div>
-
-    <nav class="bottom-nav">
+    <h1>Welcome to the $ANG Token Presale</h1>
+    <h2>Presale Information</h2>
+    <p><strong>Presale Price:</strong> $0.0025</p>
+    <p><strong>Minimum Purchase Order:</strong> $50 SUI</p>
+    <p><strong>Listing Range:</strong> $0.01 - $0.1</p>
+    <p>You will receive your $ANG tokens automatically after purchasing.</p>
+    <p>Click the button below to join our official Telegram community and get the presale wallet:</p>
+    <a href="https://t.me/ANGELUSD_COMMUNITY" target="_blank" class="button">Join Our Telegram</a>
+<nav class="bottom-nav">
         <a href="home.html" class="nav-item">
             <i class="fas fa-home"></i>
             <span>HOME</span>
@@ -140,75 +61,6 @@
             <i class="fas fa-wallet"></i>
             <span>MINING</span>
         </a>
-    </nav>
-
-    <script src="material/js/js.js"></script>
-    <script src="material/js/main.js"></script>
-
-    <script>
-        // Check if leaderboard data exists in local storage
-        function getLeaderboardData() {
-            const data = localStorage.getItem('leaderboard');
-            return data ? JSON.parse(data) : [];
-        }
-
-        // Function to update leaderboard on the page
-        function updateLeaderboard() {
-            const leaderboardData = getLeaderboardData();
-            const leaderboardContainer = document.getElementById('leaderboard');
-            leaderboardContainer.innerHTML = ''; // Clear current leaderboard
-
-            // Sort data by balance in descending order
-            leaderboardData.sort((a, b) => b.balance - a.balance);
-
-            leaderboardData.forEach(user => {
-                const taskElement = document.createElement('div');
-                taskElement.classList.add('task');
-
-                taskElement.innerHTML = `
-                    <div class="task-detail">
-                        <div class="task-image">
-                            <img src="material/images/logo.png" width="45px" alt="">
-                        </div>
-                        <div>
-                            <h4>${user.position}</h4>
-                            <div class="task-data">
-                                <img src="material/images/logo.png" width="20px" alt="Coin Icon">
-                                <h5>${user.balance.toLocaleString()}+</h5>
-                            </div>
-                            <h5>${user.username}</h5>
-                        </div>
-                    </div>
-                `;
-
-                leaderboardContainer.appendChild(taskElement);
-            });
-        }
-
-        // Call the function to load the leaderboard data
-        updateLeaderboard();
-
-        // For demonstration, setting the balance (you can replace this with actual user balance)
-        const userBalance = localStorage.getItem('userBalance') || 0;  // Get user's balance from localStorage
-        document.getElementById('balance').textContent = userBalance.toLocaleString();
-
-        // Example function to add leaderboard data to local storage (you can call this when updating user data)
-        function addUserToLeaderboard(username, balance) {
-            const leaderboardData = getLeaderboardData();
-            const newUser = {
-                username: username,
-                balance: balance,
-                position: leaderboardData.length + 1 + 'th'
-            };
-            leaderboardData.push(newUser);
-
-            // Save the updated leaderboard data to local storage
-            localStorage.setItem('leaderboard', JSON.stringify(leaderboardData));
-        }
-
-        // Example usage: Adding a new user to the leaderboard (this is just an example, you can call this when a user completes a task or similar)
-        // addUserToLeaderboard('User6', 120000000);
-
-    </script>
+</nav>
 </body>
 </html>
