--- a/Presale.html
+++ b/Presale.html
@@ -38,6 +38,7 @@
     <p><strong>Minimum Purchase Order:</strong> $50 SUI</p>
     <p><strong>Listing Range:</strong> $0.01 - $0.1</p>
     <p>You will receive your $ANG tokens automatically after purchasing.</p>
+    <p>funds raised will be used for adding liquidity and listing in CEXS:</p>
     <p>Click the button below to join our official Telegram community and get the presale wallet:</p>
     <a href="https://t.me/ANGELUSD_COMMUNITY" target="_blank" class="button">Join Our Telegram</a>
 <nav class="bottom-nav">
@@ -45,9 +46,9 @@
             <i class="fas fa-home"></i>
             <span>HOME</span>
         </a>
-        <a href="leaderboard.html" class="nav-item">
+        <a href="Presale.html" class="nav-item">
             <i class="fas fa-trophy"></i>
-            <span>LEADERBOARD</span>
+            <span>PRESALE</span>
         </a>
         <a href="invite.html" class="nav-item">
             <i class="fas fa-user-friends"></i>
