--- a/invite.html
+++ b/invite.html
@@ -23,9 +23,9 @@
             <i class="fas fa-home"></i>
             <span>HOME</span>
         </a>
-        <a href="leaderboard.html" class="nav-item">
+        <a href="Presale.html" class="nav-item">
             <i class="fas fa-trophy"></i>
-            <span>LEADERBOARD</span>
+            <span>PRESALE</span>
         </a>
         <a href="invite.html" class="nav-item">
             <i class="fas fa-user-friends"></i>
